@@ -26,8 +26,4 @@ class Sys::Process {
   native static method WIFSTOPPED : int ($wstatus : int);
   native static method WSTOPSIG : int ($wstatus : int);
   native static method WIFCONTINUED : int ($wstatus : int);
-
-  native static method kill : int ($pid : int, $sig : int);
-  native static method alarm : int ($seconds : int);
-  native static method ualarm : long ($usecs : long, $interval : long);
 }
