@@ -3,23 +3,6 @@ class TestCase::Sys::Process {
   use Sys::Process::Constant as PROCESS;
   use Time;
   
-  static method alarm : int () {
-    
-    my $rest1 = Sys::Process->alarm(5);
-    
-    unless ($rest1 == 0) {
-      return 0;
-    }
-    
-    my $rest2 = Sys::Process->alarm(5);
-    
-    unless ($rest2 == 5) {
-      return 0;
-    }
-    
-    return 1;
-  }
-
   static method fork : int () {
     
     my $child_process_id = Sys::Process->fork;
@@ -86,17 +69,6 @@ class TestCase::Sys::Process {
     }
     
     unless (Time->time - $start >= 1) {
-      return 0;
-    }
-    
-    return 1;
-  }
-
-  static method kill : int () {
-    
-    my $status = Sys::Process->kill(0, 0);
-    
-    unless ($status == 0) {
       return 0;
     }
     
@@ -277,26 +249,6 @@ class TestCase::Sys::Process {
     unless (Time->time - $start >= 1) {
       return 0;
     }
-    
-    return 1;
-  }
-
-  static method ualarm : int () {
-    
-    my $rest1 = Sys::Process->ualarm(5_000, 0);
-      
-    unless ($rest1 >= 0) {
-      return 0;
-    }
-    
-    my $rest2 = Sys::Process->ualarm(5_000, 0);
-    
-    unless ($rest2 >= 4000 && $rest2 <= 5000) {
-      return 0;
-    }
-    
-    # Cancel alarm
-    Sys::Process->ualarm(0, 0);
     
     return 1;
   }
