@@ -75,7 +75,8 @@
       TRAP_BRKPT
       TRAP_HWBKPT
       TRAP_TRACE
-
+  [Incompatible Changes]
+    * The kill method in the Sys::Process class is moved to the Sys::Signal.
 0.23 2022-11-01
   [Bug Fix]
     * Fixed the bug that the get_osname method in the Sys class returned "sunos", not "solaris" in Soralis.
